Fix about container spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -99,7 +99,7 @@ body {
  }
 
  .about-container {
-   margin-top: 10%;
+   margin-top: 5%;
    line-height: 200%;
  }
 
